--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "percy exec -- cypress run"
+    "test": "percy exec -- cypress run --browser chromium"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
+    "@percy/cli": "^1.25.0",
     "@percy/cypress": "^3.1.2",
     "cypress": "^12.13.0",
-    "dotenv": "^16.1.4",
-    "@percy/cli": "^1.25.0"
+    "dotenv": "^16.1.4"
+  },
+  "dependencies": {
+    "electron": "^3.0.10"
   }
 }
