--- a/android/.env.template
+++ b/android/.env.template
@@ -2,4 +2,4 @@ BROWSERSTACK_USERNAME=<your_browserstack_username>
 BROWSERSTACK_ACCESS_KEY=<your_browserstack_access_key>
 BROWSERSTACK_APP_ID=<testing_app_id>
 PERCY_TOKEN=<your_percy_token>
-APK_NAME=<your_app_apk_file_name>
+APP_FILE_NAME=<your_app_file_name>
