--- a/android/package.json
+++ b/android/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "webdriverio-appium-app-browserstack",
-  "version": "0.1.0",
+  "name": "android-visual-regression-tests",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "npx percy app:exec -- npm run parallel",
-    "parallel": "./node_modules/.bin/wdio tests/medsoft-android.conf.js"
+    "parallel": "./node_modules/.bin/wdio tests/medsoft-android.conf.js",
+    "upload-app": "node ./scripts/upload-app.js"
   },
   "keywords": [
     "webdriverio",
     "browserstack",
-    "tests"
+    "tests",
+    "percy",
+    "ios"
   ],
   "dependencies": {
-    "@percy/appium-app": "^1.1.0",
-    "@percy/cli": "^1.24.2",
-    "@wdio/cli": "^5.20.1",
-    "@wdio/local-runner": "^5.20.1",
-    "@wdio/mocha-framework": "^5.18.7",
+    "@percy/appium-app": "^1.2.0",
+    "@percy/cli": "^1.25.0",
+    "@wdio/cli": "^8.10.7",
+    "@wdio/local-runner": "^8.10.7",
+    "@wdio/mocha-framework": "^8.10.7",
     "axios": "^1.4.0",
-    "browserstack-local": "^1.4.5",
-    "dotenv": "^16.1.3"
+    "browserstack-local": "^1.5.3",
+    "chai": "^4.3.7",
+    "dotenv": "^16.1.4"
   }
 }
